--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,20 @@
     <title>Name Tag</title>
 </head>
 <body>
-<div class="nametag">
-    <header>
-        <h1>Hello</h1>
-        <p>My Name Is</p>
-    </header>
-    <section id="nameSpace">
-        <input type="text" placeholder="Josh" class="name"
+<section id="container">
+    <section id="hmni-container">
+        <section id="hmni-border">
+            <section id="hmni-background">
+                <section id="hmni-upper-text-div">
+                    <div id="hmni-upper-big">HELLO</div>
+                    <div id="hmni-upper-small">my name is</div>
+                </section>
+                <section id="hmni-text">
+                    <section id="hmni-name">JOSH</section>
+                <section/>
+            </section>
+        </section>
     </section>
-</div>
-
+</section>
 </body>
 </html>
