Flexbox name tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,38 @@
     <title>Name Tag</title>
 </head>
 <body>
-<section id="container">
-    <section id="hmni-container">
-        <section id="hmni-border">
-            <section id="hmni-background">
-                <section id="hmni-upper-text-div">
-                    <div id="hmni-upper-big">HELLO</div>
-                    <div id="hmni-upper-small">my name is</div>
+<section class="container">
+    <section class="hmni-container">
+        <section class="hmni-border">
+            <section class="hmni-background">
+                <section class="hmni-upper-text-div">
+                    <div class="hmni-upper-big">
+                        HELLO
+                    </div>
+                    <div class="hmni-upper-small">
+                        my name is
+                    </div>
+                    <section class="hmni-text">
+                        <section class="hmni-name">
+                            JOSH
+                        </section>
+                    </section>
                 </section>
-                <section id="hmni-text">
-                    <section id="hmni-name">JOSH</section>
-                <section/>
             </section>
         </section>
     </section>
 </section>
+<div class="flex-container">
+    <div class="flex-item-1">
+        <h1> Hello </h1>
+        <h4> my name is</h4>
+    </div>
+    <div class="flex-item-2">
+        <h1> JOSH </h1>
+    </div>
+    <div class="flex-item-3">
+        <h1></h1>
+    </div>
+</div>
 </body>
 </html>
